--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -9,7 +9,7 @@
 /* box1 */
 .box1-calendar {
 	display: grid;
-	grid-template-rows: auto auto 300px 160px 300px;
+	grid-template-rows: auto auto 300px auto auto;
 }
 
 .date-calendar {
@@ -17,6 +17,7 @@
 	align-items: center;
 	justify-content: center;
 	gap: 18px;
+	margin-bottom: 40px;
 }
 
 .date-calendar h1 {
@@ -36,15 +37,21 @@
 }
 
 .add-plan-calendar button {
+	cursor: pointer;
 	background-color: #f6f6f6;
 	width: 240px;
-	height: 40px;
+	height: 60px;
 	font-size: 20px;
 	color: black;
 	font-weight: normal;
 	margin-top: 0;
 	border: none;
 	border-radius: 20px;
+	font-size: 1.6rem;
+}
+.add-plan-calendar button:hover {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 /* main-calendar */
@@ -54,19 +61,26 @@
 	align-items: center;
 }
 
-.type-plan-calendar {
-	border-radius: 12%;
+/* type-calendar  */
+.type-plan-calendar-container {
+	padding: 10px;
+	width: 360px;
+	border-radius: 58px;
 	background-color: #f6f6f6;
 	height: fit-content;
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
-	align-items: center;
+	gap: 8px;
 	justify-content: center;
+}
+.type-plan-calendar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .type-plan-calendar p {
-	font-size: 1.6rem;
+	font-size: 1.3rem;
 }
 
 .title-type-plan-calendar {
@@ -79,34 +93,214 @@
 .description-type-plan-calendar {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 340px;
+	width: 360px;
 	height: fit-content;
-	font-size: 1.1rem;
+	font-size: 0.9rem;
 	justify-content: center;
+	align-items: center;
 }
 
 .description-type-plan-container {
 	align-items: center;
-	justify-content: center;
 	margin: 10px 10px 10px 0;
 	display: flex;
 	width: fit-content;
 	gap: 10px;
 }
 
+.description-type-plan {
+	margin-right: 10px;
+}
+
 .color-descrtiption-type-plan {
 	height: 20px;
 	width: 20px;
 	background-color: red;
+	border-radius: 4px;
+}
+
+/* next-plan */
+.next-plan-calendar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 48px;
+}
+
+.next-plan-calendar-container {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	gap: 10px;
+	height: 180px;
+	overflow-y: auto;
+	background-color: #f6f6f6;
+	width: 360px;
+	border-radius: 40px;
+}
+
+.title-next-plan-calender {
+	font-size: 1.3rem;
+	text-align: center;
+}
+.detail-next-plan-calendar-container {
+	margin-top: 8px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	justify-content: flex-start;
+	padding-left: 20px;
+}
+.detail-next-plan-calendar {
+	font-size: 1rem;
+	display: flex;
+	gap: 16px;
 }
 
 /* box2 */
 .box2-calendar {
-	background-color: rgb(207, 118, 118);
 	display: grid;
-	grid-template-rows: 100px 100px auto;
+	grid-template-rows: 60px 60px auto;
+	width: auto;
 }
 
 .container-box2-plan {
+	margin-left: 30px;
 	display: flex;
+	gap: 80px;
+}
+
+.time-type-calendar button {
+	font-size: 1.2rem;
+	width: 100px;
+	background-color: #f6f6f6;
+	border: none;
+	margin-left: 4px;
+	height: 30px;
+	border-radius: 20px;
+}
+
+.time-type-calendar button:hover {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.btn-search-calendar {
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	padding-left: 20px;
+	display: flex;
+	background-color: #f6f6f6;
+	height: 30px;
+	width: 320px;
+	gap: 10px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 20px;
+}
+
+.btn-search-calendar input {
+	font-size: 1rem;
+	width: 100%;
+	background-color: #f6f6f6;
+	border: none;
+	justify-content: center;
+	align-items: center;
+}
+.btn-date-calendar {
+	margin-left: 30px;
+	display: flex;
+	gap: 10px;
+}
+.btn-date-calendar button {
+	width: 110px;
+	border: none;
+	background-color: #f6f6f6;
+	height: 50px;
+	font-size: 1.4rem;
+	border-radius: 20px;
+}
+
+.btn-date-calendar button:hover {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+/* plan-calendar */
+.plan-calendar {
+	background-color: #f6f6f6;
+	border-radius: 20px;
+	margin-top: 20px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	overflow-x: scroll;
+	width: 1000px;
+}
+
+.plan-calendar-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: end;
+	padding: 40px 60px;
+}
+
+.specific-time-plan-calendar {
+	width: 140px;
+	font-size: 1.8rem;
+	margin-bottom: 20px;
+}
+
+/* detail-plan-calendar */
+.detail-plan-calendar {
+	display: flex;
+	gap: 40px;
+}
+
+.detail-plan-calendar-container {
+	margin-top: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+
+.content-detail-plan-calendar {
+	width: 280px;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+}
+
+.tag-detail-plan-calendar {
+	width: 38px;
+	height: 28px;
+	background-color: brown;
+	top: -20px;
+	margin-left: 25px;
+	z-index: 1;
+	left: 0;
+	position: absolute;
+	border-radius: 4px;
+}
+
+.detail-description-plan-calendar {
+	z-index: 2;
+	background: rgba(246, 246, 246, 0);
+	border-radius: 16px;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
+	border: 1px solid rgba(246, 246, 246, 0.32);
+	padding: 20px 0 10px 20px;
+	color: brown;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.title-detail-plan-calendar {
+	font-size: 1.4rem;
+}
+
+.time-detail-plan-calendar {
+	font-size: 1rem;
+	margin-left: 20px;
 }
