--- a/src/pages/CalendarPages.css
+++ b/src/pages/CalendarPages.css
@@ -1,5 +1,5 @@
 .form-make-money-page {
 	display: grid;
-	grid-template-columns: 300px 1300px;
+	grid-template-columns: 300px 1000px;
 	overflow: hidden;
 }
